--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Deployment
 metadata:
   name: techtrends
-  namespace: sandbox
+  namespace: {{ .Values.namespace.name }}
   labels:
     app: techtrends
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }} 
   selector:
     matchLabels:
       app: techtrends
@@ -16,22 +16,22 @@ spec:
         app: techtrends
     spec:
       containers:
-      - image: meladsamuel/techtrends
-        imagePullPolicy: IfNotPresent
+      - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        imagePullPolicy: {{ .Values.image.pullPoliciy }} 
         name: techtrends
         resources:
           requests:
-            cpu: 250m
-            memory: 64Mi
+            cpu: {{ .Values.resources.requests.cpu }} 
+            memory: {{ .Values.resources.requests.memory }}
           limits:
-            cpu: 500m
-            memory: 128Mi
+            cpu: {{ .Values.resources.limits.cpu }}
+            memory: {{ .Values.resources.limits.memory }}
         ports:
-        - containerPort: 3111
+        - containerPort: {{ .Values.containerPort }}
         livenessProbe:
           httpGet:
-            path: /healthz
-            port: 3111
+            path: {{ .Values.livesnessProbe.path }}
+            port: {{ .Values.containerPort }}
             httpHeaders:
             - name: Accept
               value: application/json
@@ -39,8 +39,8 @@ spec:
           periodSeconds: 3
         readinessProbe:
           httpGet:
-            path: /healthz
-            port: 3111
+            path: {{ .Values.readinessProbe.path }}
+            port: {{ .Values.containerPort }}
             httpHeaders:
             - name: Accept
               value: application/json
