--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: techtrends
-  namespace: sandbox
+  namespace: {{ .Values.namespace.name }} 
   labels:
     app: techtrends
 spec:
   ports:
-  - port: 4111
+  - port: {{ .Values.service.port }}
     protocol: TCP
-    targetPort: 3111
+    targetPort: {{ .Values.service.targetPort }}
   selector:
     app: techtrends
-  type: ClusterIP
+  type: {{ .Values.service.type }}
