--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -16,7 +16,7 @@ spec:
         app: techtrends
     spec:
       containers:
-      - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+      - image: {{ .Values.image.repository }}
         imagePullPolicy: {{ .Values.image.pullPoliciy }} 
         name: techtrends
         resources:
